--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,10 @@
 buildscript {
     repositories {
         jcenter()
-        google()        
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }       
     }
 
     dependencies {
