--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,5 +38,5 @@ repositories {
 }
 
 dependencies {
-    implementation "com.facebook.react:react-native:${safeExtGet("reactNative", "+")}" // from node_modules
+    compile "com.facebook.react:react-native:${safeExtGet("reactNative", "+")}" // from node_modules
 }
